finishing register and login

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,9 +29,9 @@
                                 Valid email required
                             </div>
                         }
-                        <div *ngIf="emal.invalid" class="alert alert-simple alert-warning">
+                        <!-- <div *ngIf="emal.invalid" class="alert alert-simple alert-warning">
                             hellow world 
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
