adding delate account : todo : redirect and fixing stuff

--- a/src/app/dashboard/profile/profile.component.css
+++ b/src/app/dashboard/profile/profile.component.css
@@ -614,6 +614,9 @@ video {
     cursor: pointer; 
     margin-left: 10px;
 }
+.redButton{
+    background-color: red;
+}
 
 #webcrumbs .focus\:outline-none:focus {
   outline: 2px solid transparent;
