--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -60,6 +60,12 @@
                       routerLink="/home">Cancel</a>
     
                   </div>
+                  <button type="submit" (click)="deleteAccount()"
+                        class="w-full redButton text-white py-2 rounded-lg hover:bg-primary-600 transition"
+                      >
+                      Delate account
+                    </button>
+
                 </div>
               </div>
               <!-- sqdqsdssssssssssss -->
