adding new collection request ui

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -149,7 +149,8 @@
               class="p-4 border rounded-lg hover:bg-neutral-50 transition text-center"
             >
               <span class="material-symbols-outlined mb-2">add_circle</span>
-              <p class="text-sm">New Request</p>
+              <p routerLink="/home/collection" class="text-sm">New Request</p>
+              
             </button>
             <button
               class="p-4 border rounded-lg hover:bg-neutral-50 transition text-center"
