--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -103,7 +103,8 @@
         </div>
         <router-outlet></router-outlet>
         <div class="bg-white rounded-xl border p-6">
-          <h2 class="text-lg font-bold mb-4">Recent Collections</h2>
+          <h2 class="text-lg font-bold mb-4">Collections</h2>
+          <!-- {{collection$}} -->
           <div class="space-y-4">
             <div
               class="flex items-center justify-between p-4 border rounded-lg hover:bg-neutral-50 transition"
