--- a/src/app/dashboard/collection/collection.component.html
+++ b/src/app/dashboard/collection/collection.component.html
@@ -1,5 +1,5 @@
 
-{{collection$ | async | json}}
+<!-- {{collection$ | async | json}} -->
 <div id="webcrumbs">
   <div class="w-full max-w-[1200px] bg-white mx-auto">
     <form #collectionForm="ngForm" novalidate (ngSubmit)="createCollection()">
