validation 3 pending requests max

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -116,7 +116,8 @@
                     recycling
                   </span>
                   <div>
-                    <p class="font-medium">{{ collection.wasteItems[0]?.type | titlecase }} Collection</p>
+                    <p class="font-medium"> Collection</p>
+                    <!-- <p class="font-medium">{{ collection.wasteItems[0]?.type | titlecase }} Collection</p> -->
                     <p class="text-sm text-neutral-600">{{ collection.totalWeight }}kg - {{ collection.status | titlecase }}</p>
                   </div>
                 </div>
