--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -72,7 +72,8 @@
     </nav>
     <div  class="grid grid-cols-1 md:grid-cols-12 gap-6 p-4 md:p-6">
       <div class="md:col-span-8 space-y-6">
-        <div *ngIf="role==='collecteur'" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <!-- <div *ngIf="role==='collecteur'" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"> -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
           <div class="p-6 bg-primary-50 rounded-xl hover:scale-105 transition">
             <div class="flex items-center justify-between">
               <span class="material-symbols-outlined text-3xl text-primary-600"
@@ -186,7 +187,8 @@
           
       </div>
       <div class="md:col-span-4 space-y-6">
-        <div *ngIf="role==='collecteur'" class="bg-white rounded-xl border p-6">
+        <!-- <div *ngIf="role==='collecteur'" class="bg-white rounded-xl border p-6"> -->
+        <div class="bg-white rounded-xl border p-6">
           <h2 class="text-lg font-bold mb-4">Points Conversion</h2>
           <div class="space-y-3">
             <button
